src/objects/Marketing_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Concept__c</fullName>
        <label>Asset Concept</label>
        <referenceTo>Asset_Concept__c</referenceTo>
        <relationshipLabel>Marketing Assets</relationshipLabel>
        <relationshipName>Marketing_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <formula>IF ( ISPICKVAL(Sub_Type__c, &quot;Online&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Trade_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Trade Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Embargo_Date__c</fullName>
        <label>Embargo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Embargo_Status__c</fullName>
        <description>it is a picklist consists of with embargo,embargo of no further notice,no embargo</description>
        <label>Embargo Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>With Embargo</fullName>
                </value>
                <value>
                    <fullName>Embargo With no further notice</fullName>
                </value>
                <value>
                    <fullName>No embargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Asset</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Inavalid Value.Select from the Lookup Window</errorMessage>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <value>Master</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Marketing_Asset__c</referenceTo>
        <relationshipLabel>Marketing Assets (Master)</relationshipLabel>
        <relationshipName>Marketing_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup  regarding the online formats</description>
        <label>Media Placement</label>
        <referenceTo>Media_Placement__c</referenceTo>
        <relationshipLabel>Marketing Assets</relationshipLabel>
        <relationshipName>Marketing_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DCP</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Localized</fullName>
                </value>
                <value>
                    <fullName>VAM</fullName>
                </value>
                <value>
                    <fullName>Trade Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAM</label>
        <referenceTo>Marketing_Asset__c</referenceTo>
        <relationshipLabel>Marketing Assets</relationshipLabel>
        <relationshipName>Marketing_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Marketing Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Marketing Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Embargo_Date_Required</fullName>
        <active>true</active>
        <description>Sets embargo date as required if Embargo Status is &apos;With Embargo&apos;</description>
        <errorConditionFormula>IF( ISPICKVAL( Embargo_Status__c , &quot;With Embargo&quot;) ,  ISBLANK( Embargo_Date__c ) , NULL)</errorConditionFormula>
        <errorDisplayField>Embargo_Date__c</errorDisplayField>
        <errorMessage>Embargo Date needs to be Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>online_formats</fullName>
        <active>true</active>
        <description>online formats must  have atleast one media placement</description>
        <errorConditionFormula>IF( ISPICKVAL( Sub_Type__c ,&quot;online&quot;) , ISBLANK( Media_Placement__c ) , null)</errorConditionFormula>
        <errorMessage>one media placement must  be required</errorMessage>
    </validationRules>
</CustomObject>